fixed css for overflow

--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  touch-action: auto;
 }
 
 body {
